--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Weather Application</string>
     <string name="_21">21</string>
+    <string name="city">city</string>
 </resources>
