--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">Weather Application</string>
     <string name="_21">21</string>
     <string name="city">city</string>
+    <string name="loading">Loading...</string>
+    <string name="degree_cel">°C</string>
+    <string name="loading_info">...</string>
+    <string name="feels_like">Feels Like</string>
+    <string name="pressure">Pressure</string>
+    <string name="wind_speed">Wind Speed</string>
 </resources>
